fixing the finance payment section (not responsive for mobile)

--- a/src/components/transaction-detail/transaction-detail.styles.scss
+++ b/src/components/transaction-detail/transaction-detail.styles.scss
@@ -1,12 +1,13 @@
 @import "../../root-styles/variables.scss";
 
-tr {
+tr.sv {
     border-color: rgba(grey, 0.4);
     td {
         padding: 0.5rem 0.5rem;
-        font-size: 12px;
+        font-size: 80%;
         font-weight: 500;
-        white-space: nowrap;
+        width: 40%;
+        text-align: center;
     }
     &:hover{
         background-color: rgba($color-light-orange, 0.2) !important;
