--- a/src/pages/finance/finance.styles.scss
+++ b/src/pages/finance/finance.styles.scss
@@ -1,8 +1,12 @@
 .finance-page{
-    padding: 7rem 4rem;
+    padding: 7rem 5rem 7rem 4rem;
+
+    @media screen and (max-width: 1026px) {
+        padding: 7rem 3rem 7rem 4rem;
+    }
 
     @media screen and (max-width: 993px) {
-        padding: 7rem 7rem 0 1rem;
+        padding: 7rem 6rem 0 1rem;
     }
 
     @media screen and (max-width: 786px) {
